# edict

./: .edict.toml  .gitignore  AGENTS.md  Cargo.toml  README.md  agents-managed.md.jinja  finish.md  review-request.md  start.md  testing.md  ux-test-report.md  ux-test.md  worker-loop.md
.agents/edict/: .version  finish.md  groom.md  merge-check.md  mission.md  preflight.md  review-request.md  start.md  worker-loop.md
.agents/edict/prompts/: reviewer-security.md
.bones/events/: 2026-02.manifest  2026-03.events  2026-03.manifest  2026-04.events  2026-04.manifest  2026-06.events  2026-06.manifest  2026-07.events
.seal/: events.jsonl.v1.backup
.seal/reviews/cr-104w/: events.jsonl
.seal/reviews/cr-1279/: events.jsonl
.seal/reviews/cr-15ak/: events.jsonl
.seal/reviews/cr-1bgf/: events.jsonl
.seal/reviews/cr-1d5x/: events.jsonl
.seal/reviews/cr-1mf3/: events.jsonl
.seal/reviews/cr-1mp8/: events.jsonl
docs/: dev-agent-architecture.md  protocol-quality-gate-matrix.md
notes/: agent-flywheel-tools.md  cass.md  dcg-evaluation.md  eval-framework.md  workflow-docs-maintenance.md
schemas/: edict.schema.json
site/: botbus.html  gemini.html  index.html
src/: config.rs  error.rs  layout.rs  lib.rs  main.rs  subprocess.rs  telemetry.rs  template.rs
src/commands/: doctor.rs  hooks.rs  init.rs  iteration_start.rs  mod.rs  responder.rs  run.rs  run_agent.rs  run_reviewer_loop.rs  schema.rs  status.rs  sync.rs  triage.rs  worker_loop.rs
src/hooks/: mod.rs  registry.rs  run.rs
src/templates/: agents-managed.md.jinja  reviewer.md.jinja
tests/: run_agent_integration.rs
(+77 files in other folders)
